# kv3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Findllama.cpp.cmake  Sanitizers.cmake
include/kv3d/api/: server.hpp  types.hpp
include/kv3d/cli/: config.hpp
include/kv3d/core/: canonical_prompt.hpp  guardrails.hpp  prefix_hash.hpp
include/kv3d/kv/: delta_codec.hpp  kv_block.hpp  prefix_store.hpp
include/kv3d/kv/experimental/: group_codec.hpp
include/kv3d/metrics/: metrics.hpp
include/kv3d/sched/: session_manager.hpp
include/kv3d/storage/: gpu_cache.hpp  ram_cache.hpp  snapshot_index.hpp
scripts/: bench.sh  install.sh  package.sh
src/: CMakeLists.txt
src/api/: routes.cpp  server.cpp  stream_writer.cpp
src/cli/: config.cpp  main.cpp
src/core/: canonical_prompt.cpp  fallback_policy.cpp  guardrails.cpp  prefix_hash.cpp
src/kv/: delta_codec.cpp  prefix_store.cpp  quant_residual.cpp
src/kv/experimental/: group_codec.cpp
src/metrics/: metrics.cpp  prom_exporter.cpp
src/sched/: session_manager.cpp
src/storage/: gpu_cache.cpp  ram_cache.cpp  snapshot_index.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_api_session_resume.cpp
tests/load/: CMakeLists.txt  bench_driver.cpp
tests/unit/: CMakeLists.txt  test_delta_codec.cpp  test_group_codec.cpp  test_prefix_hash.cpp
